feat: Adição de alguns testes unitários